syntax = "proto3";

package temperature;

import "google/protobuf/timestamp.proto";

service TemperatureService {
    rpc SendTemperatures(TemperatureRequest) returns (Empty);
}

message TemperatureReading {
    google.protobuf.Timestamp timestamp = 1;
    double value = 2;  // Temperature value
}

message TemperatureRequest {
    repeated TemperatureReading readings = 1;
}

message Empty {

}

